--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,12 +9,12 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
-    goos:
+  - goos:
       - linux
       - windows
       - darwin
-    binary: img-api
-    goarch:
+  - binary: img-api
+  - goarch:
       - arm64
       - arm
       - amd64
@@ -26,10 +26,10 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
-  format_overrides:
+  - format_overrides:
       goos: windows
       format: zip
-  files:
+  - files:
       - LICENSE
       - README.md
       - Endpoints.md
