--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,14 +21,14 @@ builds:
       - 386
 archives:
   - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+    - darwin: Darwin
+    - linux: Linux
+    - windows: Windows
+    - 386: i386
+    - amd64: x86_64
   - format_overrides:
-      goos: windows
-      format: zip
+      - goos: windows
+      - format: zip
   - files:
       - LICENSE
       - README.md
